--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>口袋豆瓣</title>
+    <title>口袋豆瓣</title>
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_707002_bnof627yr3f.css">
 </head>
 <body>
 	<div id="root"></div>
